// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatronDocumentRequests tests should load the details component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      columns={
        Array [
          Object {
            "formatter": [Function],
            "title": "ID",
          },
          Object {
            "field": "metadata.document_pid",
            "title": "Document ID",
          },
          Object {
            "field": "metadata.title",
            "title": "Document title",
          },
          Object {
            "field": "metadata.state",
            "title": "State",
          },
          Object {
            "field": "created",
            "formatter": [Function],
            "title": "Created on ",
          },
        ]
      }
      currentPage={1}
      data={Array []}
      headerActionComponent={null}
      name="new book requests"
      paginationComponent={null}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          to="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={false}
      subtitle=""
      title=""
      totalHitsCount={0}
    />
  </Error>
</Loader>
`;

exports[`PatronDocumentRequests tests should render patron document requests 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronDocumentRequests
      data={
        Object {
          "hits": Array [
            Object {
              "created": "2018-01-01T10:05:00.000Z",
              "id": 1,
              "metadata": Object {
                "patron": Object {
                  "email": "patron_1@test.ch",
                  "id": "patron_1",
                  "name": "patron_1",
                },
                "patron_pid": "patron_1",
                "pid": "documentRequest1",
                "state": "PENDING",
                "title": "Test",
              },
              "pid": "documentRequest1",
              "updated": "2018-01-01T10:05:00.000Z",
            },
            Object {
              "created": "2018-01-01T10:05:00.000Z",
              "id": 2,
              "metadata": Object {
                "patron": Object {
                  "email": "patron_2@test.ch",
                  "id": "patron_2",
                  "name": "patron_2",
                },
                "patron_pid": "patron_2",
                "pid": "documentRequest2",
                "state": "PENDING",
                "title": "Test",
              },
              "pid": "documentRequest2",
              "updated": "2018-01-01T10:05:00.000Z",
            },
          ],
          "total": 2,
        }
      }
      fetchPatronDocumentRequests={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      patronDetails={
        Object {
          "email": "name@test.ch",
          "name": "Name",
          "user_pid": "2",
        }
      }
      showMaxDocumentRequests={5}
    >
      <Loader>
        <Error>
          <ResultsTable
            columns={
              Array [
                Object {
                  "formatter": [Function],
                  "title": "ID",
                },
                Object {
                  "field": "metadata.document_pid",
                  "title": "Document ID",
                },
                Object {
                  "field": "metadata.title",
                  "title": "Document title",
                },
                Object {
                  "field": "metadata.state",
                  "title": "State",
                },
                Object {
                  "field": "created",
                  "formatter": [Function],
                  "title": "Created on ",
                },
              ]
            }
            currentPage={1}
            data={
              Array [
                Object {
                  "created": "2018-01-01T10:05:00.000Z",
                  "id": 1,
                  "metadata": Object {
                    "patron": Object {
                      "email": "patron_1@test.ch",
                      "id": "patron_1",
                      "name": "patron_1",
                    },
                    "patron_pid": "patron_1",
                    "pid": "documentRequest1",
                    "state": "PENDING",
                    "title": "Test",
                  },
                  "pid": "documentRequest1",
                  "updated": "2018-01-01T10:05:00.000Z",
                },
                Object {
                  "created": "2018-01-01T10:05:00.000Z",
                  "id": 2,
                  "metadata": Object {
                    "patron": Object {
                      "email": "patron_2@test.ch",
                      "id": "patron_2",
                      "name": "patron_2",
                    },
                    "patron_pid": "patron_2",
                    "pid": "documentRequest2",
                    "state": "PENDING",
                    "title": "Test",
                  },
                  "pid": "documentRequest2",
                  "updated": "2018-01-01T10:05:00.000Z",
                },
              ]
            }
            headerActionComponent={null}
            name="new book requests"
            paginationComponent={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
              />
            }
            showAllResults={false}
            showMaxRows={5}
            singleLine={false}
            subtitle=""
            title=""
            totalHitsCount={2}
          >
            <Table
              as="table"
              compact={true}
              name="new book requests"
              selectable={true}
              striped={true}
              subtitle=""
              title=""
              unstackable={true}
            >
              <table
                className="ui selectable striped unstackable compact table"
                name="new book requests"
                subtitle=""
                title=""
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "ID",
                      },
                      Object {
                        "field": "metadata.document_pid",
                        "title": "Document ID",
                      },
                      Object {
                        "field": "metadata.title",
                        "title": "Document title",
                      },
                      Object {
                        "field": "metadata.state",
                        "title": "State",
                      },
                      Object {
                        "field": "created",
                        "formatter": [Function],
                        "title": "Created on ",
                      },
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            key="ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Document ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Document ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Document title"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Document title
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="State"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                State
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Created on "
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Created on 
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "ID",
                      },
                      Object {
                        "field": "metadata.document_pid",
                        "title": "Document ID",
                      },
                      Object {
                        "field": "metadata.title",
                        "title": "Document title",
                      },
                      Object {
                        "field": "metadata.state",
                        "title": "State",
                      },
                      Object {
                        "field": "created",
                        "formatter": [Function],
                        "title": "Created on ",
                      },
                    ]
                  }
                  rows={
                    Array [
                      Object {
                        "created": "2018-01-01T10:05:00.000Z",
                        "id": 1,
                        "metadata": Object {
                          "patron": Object {
                            "email": "patron_1@test.ch",
                            "id": "patron_1",
                            "name": "patron_1",
                          },
                          "patron_pid": "patron_1",
                          "pid": "documentRequest1",
                          "state": "PENDING",
                          "title": "Test",
                        },
                        "pid": "documentRequest1",
                        "updated": "2018-01-01T10:05:00.000Z",
                      },
                      Object {
                        "created": "2018-01-01T10:05:00.000Z",
                        "id": 2,
                        "metadata": Object {
                          "patron": Object {
                            "email": "patron_2@test.ch",
                            "id": "patron_2",
                            "name": "patron_2",
                          },
                          "patron_pid": "patron_2",
                          "pid": "documentRequest2",
                          "state": "PENDING",
                          "title": "Test",
                        },
                        "pid": "documentRequest2",
                        "updated": "2018-01-01T10:05:00.000Z",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="documentRequest1"
                        key="documentRequest1"
                      >
                        <tr
                          className=""
                          data-test="documentRequest1"
                        >
                          <TableCell
                            as="td"
                            data-label="ID"
                            data-test="0-documentRequest1"
                            key="0-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="ID"
                              data-test="0-documentRequest1"
                            >
                              <Link
                                data-test="documentRequest1"
                                to="url/documentRequest1"
                              >
                                <LinkAnchor
                                  data-test="documentRequest1"
                                  href="/url/documentRequest1"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="documentRequest1"
                                    href="/url/documentRequest1"
                                    onClick={[Function]}
                                  >
                                    documentRequest1
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Document ID"
                            data-test="1-documentRequest1"
                            key="1-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="Document ID"
                              data-test="1-documentRequest1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Document title"
                            data-test="2-documentRequest1"
                            key="2-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="Document title"
                              data-test="2-documentRequest1"
                            >
                              Test
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="State"
                            data-test="3-documentRequest1"
                            key="3-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="State"
                              data-test="3-documentRequest1"
                            >
                              PENDING
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Created on "
                            data-test="4-documentRequest1"
                            key="4-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="Created on "
                              data-test="4-documentRequest1"
                            >
                              2018-01-01
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="documentRequest2"
                        key="documentRequest2"
                      >
                        <tr
                          className=""
                          data-test="documentRequest2"
                        >
                          <TableCell
                            as="td"
                            data-label="ID"
                            data-test="0-documentRequest2"
                            key="0-documentRequest2"
                          >
                            <td
                              className=""
                              data-label="ID"
                              data-test="0-documentRequest2"
                            >
                              <Link
                                data-test="documentRequest2"
                                to="url/documentRequest2"
                              >
                                <LinkAnchor
                                  data-test="documentRequest2"
                                  href="/url/documentRequest2"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="documentRequest2"
                                    href="/url/documentRequest2"
                                    onClick={[Function]}
                                  >
                                    documentRequest2
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Document ID"
                            data-test="1-documentRequest2"
                            key="1-documentRequest2"
                          >
                            <td
                              className=""
                              data-label="Document ID"
                              data-test="1-documentRequest2"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Document title"
                            data-test="2-documentRequest2"
                            key="2-documentRequest2"
                          >
                            <td
                              className=""
                              data-label="Document title"
                              data-test="2-documentRequest2"
                            >
                              Test
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="State"
                            data-test="3-documentRequest2"
                            key="3-documentRequest2"
                          >
                            <td
                              className=""
                              data-label="State"
                              data-test="3-documentRequest2"
                            >
                              PENDING
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Created on "
                            data-test="4-documentRequest2"
                            key="4-documentRequest2"
                          >
                            <td
                              className=""
                              data-label="Created on "
                              data-test="4-documentRequest2"
                            >
                              2018-01-01
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={5}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      disabled={false}
                      fluid={false}
                      to="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
                    />
                  }
                  showAllResults={false}
                  showMaxRows={5}
                />
              </table>
            </Table>
          </ResultsTable>
        </Error>
      </Loader>
    </PatronDocumentRequests>
  </Router>
</BrowserRouter>
`;

exports[`PatronDocumentRequests tests should render show a message with no user document requests 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronDocumentRequests
      data={
        Object {
          "hits": Array [],
          "total": 0,
        }
      }
      fetchPatronDocumentRequests={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      patronDetails={
        Object {
          "email": "name@test.ch",
          "name": "Name",
          "user_pid": "2",
        }
      }
      showMaxDocumentRequests={5}
    >
      <Loader>
        <Error>
          <ResultsTable
            columns={
              Array [
                Object {
                  "formatter": [Function],
                  "title": "ID",
                },
                Object {
                  "field": "metadata.document_pid",
                  "title": "Document ID",
                },
                Object {
                  "field": "metadata.title",
                  "title": "Document title",
                },
                Object {
                  "field": "metadata.state",
                  "title": "State",
                },
                Object {
                  "field": "created",
                  "formatter": [Function],
                  "title": "Created on ",
                },
              ]
            }
            currentPage={1}
            data={Array []}
            headerActionComponent={null}
            name="new book requests"
            paginationComponent={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
              />
            }
            showAllResults={false}
            showMaxRows={5}
            singleLine={false}
            subtitle=""
            title=""
            totalHitsCount={0}
          >
            <Message
              data-test="no-results"
              icon={true}
              info={true}
            >
              <div
                className="ui icon info message"
                data-test="no-results"
              >
                <MessageContent>
                  <div
                    className="content"
                  >
                    <MessageHeader>
                      <div
                        className="header"
                      >
                        No results found
                      </div>
                    </MessageHeader>
                    There are no 
                    new book requests
                    .
                  </div>
                </MessageContent>
              </div>
            </Message>
          </ResultsTable>
        </Error>
      </Loader>
    </PatronDocumentRequests>
  </Router>
</BrowserRouter>
`;

exports[`PatronDocumentRequests tests should render the see all button when showing only a few patron document requests 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronDocumentRequests
      data={
        Object {
          "hits": Array [
            Object {
              "created": "2018-01-01T10:05:00.000Z",
              "id": 1,
              "metadata": Object {
                "patron": Object {
                  "email": "patron_1@test.ch",
                  "id": "patron_1",
                  "name": "patron_1",
                },
                "patron_pid": "patron_1",
                "pid": "documentRequest1",
                "state": "PENDING",
                "title": "Test",
              },
              "pid": "documentRequest1",
              "updated": "2018-01-01T10:05:00.000Z",
            },
            Object {
              "created": "2018-01-01T10:05:00.000Z",
              "id": 2,
              "metadata": Object {
                "patron": Object {
                  "email": "patron_2@test.ch",
                  "id": "patron_2",
                  "name": "patron_2",
                },
                "patron_pid": "patron_2",
                "pid": "documentRequest2",
                "state": "PENDING",
                "title": "Test",
              },
              "pid": "documentRequest2",
              "updated": "2018-01-01T10:05:00.000Z",
            },
          ],
          "total": 2,
        }
      }
      fetchPatronDocumentRequests={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      patronDetails={
        Object {
          "email": "name@test.ch",
          "name": "Name",
          "user_pid": "2",
        }
      }
      showMaxDocumentRequests={1}
    >
      <Loader>
        <Error>
          <ResultsTable
            columns={
              Array [
                Object {
                  "formatter": [Function],
                  "title": "ID",
                },
                Object {
                  "field": "metadata.document_pid",
                  "title": "Document ID",
                },
                Object {
                  "field": "metadata.title",
                  "title": "Document title",
                },
                Object {
                  "field": "metadata.state",
                  "title": "State",
                },
                Object {
                  "field": "created",
                  "formatter": [Function],
                  "title": "Created on ",
                },
              ]
            }
            currentPage={1}
            data={
              Array [
                Object {
                  "created": "2018-01-01T10:05:00.000Z",
                  "id": 1,
                  "metadata": Object {
                    "patron": Object {
                      "email": "patron_1@test.ch",
                      "id": "patron_1",
                      "name": "patron_1",
                    },
                    "patron_pid": "patron_1",
                    "pid": "documentRequest1",
                    "state": "PENDING",
                    "title": "Test",
                  },
                  "pid": "documentRequest1",
                  "updated": "2018-01-01T10:05:00.000Z",
                },
                Object {
                  "created": "2018-01-01T10:05:00.000Z",
                  "id": 2,
                  "metadata": Object {
                    "patron": Object {
                      "email": "patron_2@test.ch",
                      "id": "patron_2",
                      "name": "patron_2",
                    },
                    "patron_pid": "patron_2",
                    "pid": "documentRequest2",
                    "state": "PENDING",
                    "title": "Test",
                  },
                  "pid": "documentRequest2",
                  "updated": "2018-01-01T10:05:00.000Z",
                },
              ]
            }
            headerActionComponent={null}
            name="new book requests"
            paginationComponent={null}
            seeAllComponent={
              <SeeAllButton
                disabled={false}
                fluid={false}
                to="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
              />
            }
            showAllResults={false}
            showMaxRows={1}
            singleLine={false}
            subtitle=""
            title=""
            totalHitsCount={2}
          >
            <Table
              as="table"
              compact={true}
              name="new book requests"
              selectable={true}
              striped={true}
              subtitle=""
              title=""
              unstackable={true}
            >
              <table
                className="ui selectable striped unstackable compact table"
                name="new book requests"
                subtitle=""
                title=""
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "ID",
                      },
                      Object {
                        "field": "metadata.document_pid",
                        "title": "Document ID",
                      },
                      Object {
                        "field": "metadata.title",
                        "title": "Document title",
                      },
                      Object {
                        "field": "metadata.state",
                        "title": "State",
                      },
                      Object {
                        "field": "created",
                        "formatter": [Function],
                        "title": "Created on ",
                      },
                    ]
                  }
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                            key="ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Document ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Document ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Document title"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Document title
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="State"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                State
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Created on "
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Created on 
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      Object {
                        "formatter": [Function],
                        "title": "ID",
                      },
                      Object {
                        "field": "metadata.document_pid",
                        "title": "Document ID",
                      },
                      Object {
                        "field": "metadata.title",
                        "title": "Document title",
                      },
                      Object {
                        "field": "metadata.state",
                        "title": "State",
                      },
                      Object {
                        "field": "created",
                        "formatter": [Function],
                        "title": "Created on ",
                      },
                    ]
                  }
                  rows={
                    Array [
                      Object {
                        "created": "2018-01-01T10:05:00.000Z",
                        "id": 1,
                        "metadata": Object {
                          "patron": Object {
                            "email": "patron_1@test.ch",
                            "id": "patron_1",
                            "name": "patron_1",
                          },
                          "patron_pid": "patron_1",
                          "pid": "documentRequest1",
                          "state": "PENDING",
                          "title": "Test",
                        },
                        "pid": "documentRequest1",
                        "updated": "2018-01-01T10:05:00.000Z",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="documentRequest1"
                        key="documentRequest1"
                      >
                        <tr
                          className=""
                          data-test="documentRequest1"
                        >
                          <TableCell
                            as="td"
                            data-label="ID"
                            data-test="0-documentRequest1"
                            key="0-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="ID"
                              data-test="0-documentRequest1"
                            >
                              <Link
                                data-test="documentRequest1"
                                to="url/documentRequest1"
                              >
                                <LinkAnchor
                                  data-test="documentRequest1"
                                  href="/url/documentRequest1"
                                  navigate={[Function]}
                                >
                                  <a
                                    data-test="documentRequest1"
                                    href="/url/documentRequest1"
                                    onClick={[Function]}
                                  >
                                    documentRequest1
                                  </a>
                                </LinkAnchor>
                              </Link>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Document ID"
                            data-test="1-documentRequest1"
                            key="1-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="Document ID"
                              data-test="1-documentRequest1"
                            >
                              -
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Document title"
                            data-test="2-documentRequest1"
                            key="2-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="Document title"
                              data-test="2-documentRequest1"
                            >
                              Test
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="State"
                            data-test="3-documentRequest1"
                            key="3-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="State"
                              data-test="3-documentRequest1"
                            >
                              PENDING
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-label="Created on "
                            data-test="4-documentRequest1"
                            key="4-documentRequest1"
                          >
                            <td
                              className=""
                              data-label="Created on "
                              data-test="4-documentRequest1"
                            >
                              2018-01-01
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={5}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      disabled={false}
                      fluid={false}
                      to="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
                    />
                  }
                  showAllResults={false}
                  showMaxRows={1}
                >
                  <TableFooter
                    as="tfoot"
                    data-test="footer"
                    fullWidth={true}
                  >
                    <TableHeader
                      as="tfoot"
                      data-test="footer"
                      fullWidth={true}
                    >
                      <tfoot
                        className="full-width"
                        data-test="footer"
                      >
                        <TableRow
                          as="tr"
                          cellAs="td"
                        >
                          <tr
                            className=""
                          >
                            <TableHeaderCell
                              as="th"
                              colSpan={6}
                              textAlign="right"
                            >
                              <TableCell
                                as="th"
                                className=""
                                colSpan={6}
                                textAlign="right"
                              >
                                <th
                                  className="right aligned"
                                  colSpan={6}
                                >
                                  <span
                                    className="results-table-compact-summary"
                                  >
                                    Showing entries 
                                    1
                                    -
                                    1
                                     of 
                                    2
                                     
                                  </span>
                                  <span>
                                    <SeeAllButton
                                      disabled={false}
                                      fluid={false}
                                      to="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
                                    >
                                      <Button
                                        as={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "displayName": "Link",
                                            "propTypes": Object {
                                              "innerRef": [Function],
                                              "onClick": [Function],
                                              "replace": [Function],
                                              "target": [Function],
                                              "to": [Function],
                                            },
                                            "render": [Function],
                                          }
                                        }
                                        disabled={false}
                                        fluid={false}
                                        size="tiny"
                                        to="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
                                      >
                                        <Ref
                                          innerRef={
                                            Object {
                                              "current": <a
                                                class="ui tiny button"
                                                href="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
                                                role="button"
                                              >
                                                See all
                                              </a>,
                                            }
                                          }
                                        >
                                          <RefForward
                                            innerRef={
                                              Object {
                                                "current": <a
                                                  class="ui tiny button"
                                                  href="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
                                                  role="button"
                                                >
                                                  See all
                                                </a>,
                                              }
                                            }
                                          >
                                            <Link
                                              className="ui tiny button"
                                              onClick={[Function]}
                                              role="button"
                                              to="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
                                            >
                                              <LinkAnchor
                                                className="ui tiny button"
                                                href="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
                                                navigate={[Function]}
                                                onClick={[Function]}
                                                role="button"
                                              >
                                                <a
                                                  className="ui tiny button"
                                                  href="/backoffice/document-requests?q=(patron_pid:2)&sort=-mostrecent"
                                                  onClick={[Function]}
                                                  role="button"
                                                >
                                                  See all
                                                </a>
                                              </LinkAnchor>
                                            </Link>
                                          </RefForward>
                                        </Ref>
                                      </Button>
                                    </SeeAllButton>
                                  </span>
                                  <span />
                                </th>
                              </TableCell>
                            </TableHeaderCell>
                          </tr>
                        </TableRow>
                      </tfoot>
                    </TableHeader>
                  </TableFooter>
                </ResultsTableFooter>
              </table>
            </Table>
          </ResultsTable>
        </Error>
      </Loader>
    </PatronDocumentRequests>
  </Router>
</BrowserRouter>
`;
